Bug 515546 - Null check mReader in nsOggDecoder::Shutdown.  r=chris.double